<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_add_curso"
            android:icon="@drawable/ic_add"
            android:title="@string/menu_adicionar" />
        <item
            android:id="@+id/nav_lembretes"
            android:icon="@drawable/ic_lembretes"
            android:title="@string/menu_lembretes" />
        <item
            android:id="@+id/nav_meus_cursos"
            android:icon="@drawable/ic_meus_cursos"
            android:title="@string/menu_meus_cursos" />

    </group>

    <item android:title="@string/configuracoes">
        <menu>
            <item
                android:id="@+id/nav_perfil"
                android:icon="@drawable/baseline_perm_identity_24"
                android:title="@string/meu_perfil" />
            <item
                android:id="@+id/nav_sobre"
                android:icon="@drawable/outline_contact_support_black_18dp"
                android:title="Sobre" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/action_logout" />
        </menu>
    </item>

</menu>
